# nekobot

./: .gitignore  CLAUDE.md  HANDOFF.md  LICENSE  README.md  pyproject.toml
data/: config.example.yaml
docs/: architecture.md  research.md
docs/patch-notes/: v2.1.87.md
docs/plans/: PLAN-001-skill-loading.md  PLAN-002-scheduled-tasks.md  PLAN-003-daily-digest.md  PLAN-005-visual-avatar.md  PLAN-006-pre-compact-hook.md  PLAN-patched-claude.md  README.md
docs/requirements/: README.md  REQ-001-skill-loading.md  REQ-002-scheduled-tasks.md  REQ-003-daily-digest.md  REQ-004-message-timestamp.md  REQ-005-visual-avatar.md  REQ-006-skills-visibility.md  REQ-007-cron-tool-description.md
docs/sdd/: 00-overview.md  01-sdk-verification.md  02-mcp-tools.md  03-e2e-smoke-test.md  04-curiosity-ping.md  05-media-handler.md  06-error-resilience.md  07-tests.md  08-workspace-migration.md  09-cli-commands.md
nekobot/: __main__.py  bootstrap.py  cli.py  main.py
nekobot/bus/: events.py  queue.py
nekobot/channels/: base.py  dingtalk.py  manager.py  telegram.py
nekobot/config/: loader.py  schema.py
nekobot/cron/: service.py  store.py  types.py
nekobot/gateway/: hooks.py  media.py  ping.py  prompt.py  router.py  state.py  tools.py
nekobot/memory/: extractor.py  search.py  (+1 more)
scripts/: anchors.json  patch_claude.py  test_memory.py
tests/: conftest.py  test_bootstrap.py  test_bus.py  test_cli.py  test_config_loader.py  test_cron.py  test_dingtalk.py  test_extractor.py  test_gateway.py  test_memory_store.py  test_prompt.py  test_search.py  test_state.py  test_telegram.py
(+9 files in other folders)
