[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nekobot"
version = "0.1.0"
description = "Personal AI assistant: Claude Code + personality + long-term memory + IM gateway"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.49",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "loguru>=0.7",
    "httpx>=0.24",
    "typer>=0.9",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
    "croniter>=1.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
telegram = ["python-telegram-bot>=21.0"]
discord = ["aiohttp>=3.9"]
dingtalk = ["dingtalk-stream>=1.0"]
all = ["nekobot[telegram,discord,dingtalk]"]
dev = ["ruff", "pytest", "pytest-asyncio"]

[project.scripts]
nekobot = "nekobot.main:main"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
